[gd_scene load_steps=12 format=3 uid="uid://d3hxdkoy73pf1"]

[ext_resource type="Script" path="res://scenes/AchievementsView/AchievementsView.gd" id="1"]
[ext_resource type="LabelSettings" uid="uid://dcb771ib3tfno" path="res://styles/ViewTitleLabelSettings.tres" id="2_1831t"]
[ext_resource type="PackedScene" uid="uid://djhhnis3ksdjk" path="res://scenes/UI/NetworkImage.tscn" id="3"]
[ext_resource type="Script" path="res://scenes/AchievementsView/AchievementsList.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://t8s6xh1ax7uy" path="res://scenes/UI/PrimaryButton.tscn" id="5"]
[ext_resource type="Script" path="res://scenes/AchievementsView/AchievementPopup.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/AchievementsView/AchievementsListAchievement.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://dkprjbptror6n" path="res://components/StyledPopupWindow/StyledPopupWindow.tscn" id="8_37km7"]
[ext_resource type="FontFile" uid="uid://djdr1hyqtgka6" path="res://fonts/Roboto-Bold.ttf" id="8_75ml2"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6nfih"]

[node name="AchievementsView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Title" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 1
text = "Achievements"
label_settings = ExtResource("2_1831t")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MC"]
layout_mode = 2

[node name="RefreshBtn" parent="MC/HBoxContainer" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Refresh"

[node name="RR" type="ReferenceRect" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
border_color = Color(1, 0, 0, 0)

[node name="AchievementsList" type="MarginContainer" parent="RR"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="SC" type="ScrollContainer" parent="RR/AchievementsList"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="RR/AchievementsList/SC"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="AchievementsListAchievement" parent="RR/AchievementsList/SC/VB" instance=ExtResource("7")]
layout_mode = 2

[node name="AchievementsListAchievement2" parent="RR/AchievementsList/SC/VB" instance=ExtResource("7")]
layout_mode = 2

[node name="AchievementPopup" parent="." instance=ExtResource("8_37km7")]
unique_name_in_owner = true
title = "VIEW ACHIEVEMENT"
size = Vector2i(572, 628)
visible = false
script = ExtResource("6")

[node name="VB" parent="AchievementPopup" index="1"]
offset_right = 568.0
offset_bottom = 624.0

[node name="GridContainer" type="GridContainer" parent="AchievementPopup/VB/MC/VB" index="0"]
layout_mode = 2
theme_override_constants/h_separation = 64
columns = 2

[node name="IdLabelTitle" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2
text = "Id"

[node name="IdLabel" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2

[node name="FlavorLabelTitle" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2
text = "Flavor Text"

[node name="FlavorLabel" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2

[node name="IsVisibleLabelTitle" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2
text = "Is Visible"

[node name="IsVisibleLabel" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2
text = "Yes"

[node name="IsUnlockedLabelTitle" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2
text = "Is Unlocked"

[node name="IsUnlockedLabel" type="Label" parent="AchievementPopup/VB/MC/VB/GridContainer"]
layout_mode = 2
text = "Yes"

[node name="HSeparator2" type="HSeparator" parent="AchievementPopup/VB/MC/VB" index="1"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MC" type="MarginContainer" parent="AchievementPopup/VB/MC/VB" index="2"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VB" type="VBoxContainer" parent="AchievementPopup/VB/MC/VB/MC"]
layout_mode = 2

[node name="StatThesholdsLabel" type="Label" parent="AchievementPopup/VB/MC/VB/MC/VB"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_75ml2")
text = "Stat Thresholds"

[node name="SC" type="ScrollContainer" parent="AchievementPopup/VB/MC/VB/MC/VB"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="StatThresholdsVB" type="VBoxContainer" parent="AchievementPopup/VB/MC/VB/MC/VB/SC"]
layout_mode = 2

[node name="Label" type="Label" parent="AchievementPopup/VB/MC/VB/MC/VB/SC/StatThresholdsVB"]
layout_mode = 2
text = "Name: Value"

[node name="HB" type="HBoxContainer" parent="AchievementPopup/VB/MC/VB" index="3"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="AchievementPopup/VB/MC/VB/HB"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LockedImage" parent="AchievementPopup/VB/MC/VB/HB/VB" instance=ExtResource("3")]
layout_mode = 2

[node name="LockedLabel" type="Label" parent="AchievementPopup/VB/MC/VB/HB/VB"]
layout_mode = 2
text = "Locked Name"

[node name="LockedDescLabel" type="RichTextLabel" parent="AchievementPopup/VB/MC/VB/HB/VB"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "(LOCK) Desc for Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet blandit lectus, ac eleifend erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
fit_content = true

[node name="VS" type="VSeparator" parent="AchievementPopup/VB/MC/VB/HB"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="VB2" type="VBoxContainer" parent="AchievementPopup/VB/MC/VB/HB"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UnlockedImage" parent="AchievementPopup/VB/MC/VB/HB/VB2" instance=ExtResource("3")]
layout_mode = 2

[node name="UnlockedLabel" type="Label" parent="AchievementPopup/VB/MC/VB/HB/VB2"]
layout_mode = 2
text = "Unlocked Name"

[node name="UnlockedDescLabel" type="RichTextLabel" parent="AchievementPopup/VB/MC/VB/HB/VB2"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Desc for Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sit amet blandit lectus, ac eleifend erat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus."
fit_content = true

[node name="HSeparator" type="HSeparator" parent="AchievementPopup/VB/MC/VB" index="4"]
layout_mode = 2
theme_override_styles/separator = SubResource("1")

[node name="UnlockBtn" parent="AchievementPopup/VB/MC/VB" index="5" instance=ExtResource("5")]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_6nfih")
text = "Unlock"

[editable path="AchievementPopup"]
